tests/error/type_errors/invert_not_int.py
from guppy.decorator import guppy


@guppy(compile=True)
def foo() -> int:
    return ~True
